--- a/roles/lb-tier/templates/haproxy.cfg.j2
+++ b/roles/lb-tier/templates/haproxy.cfg.j2
@@ -25,6 +25,14 @@ backend app-servers
     mode http
     balance roundrobin
     option forwardfor
-{% for host in groups['apps'] %}
-    server app{{loop.index}} {{ hostvars[host]['inventory_hostname'] }}:8080 cookie app{{loop.index}} check 
-{% endfor %}
+    {% if groups['apps'] is defined%}
+      {% for app in groups['apps'] %}
+        server app{{loop.index}} {{ hostvars[app]['inventory_hostname'] }}:8080 cookie app{{loop.index}} check
+      {% endfor %}
+    {% endif %}
+    {% if groups['tag_AnsibleGroup_apps'] is defined %}
+      {% for app in groups['tag_AnsibleGroup_apps'] %}
+        server app{{loop.index}} {{ hostvars[app]['ansible_facts']['default_ipv4']['address'] }}:8080 cookie app{{loop.index}} check
+      {% endfor %}
+    {% endif %}
+
