--- a/roles/lb-tier/templates/haproxy.cfg.j2
+++ b/roles/lb-tier/templates/haproxy.cfg.j2
@@ -26,13 +26,13 @@ backend app-servers
     balance roundrobin
     option forwardfor
     {% if groups['apps'] is defined%}
-      {% for app in groups['apps'] %}
-        server app{{loop.index}} {{ hostvars[app]['inventory_hostname'] }}:8080 cookie app{{loop.index}} check
+      {% for host in groups['apps'] %}
+        server app{{loop.index}} {{ hostvars[host]['inventory_hostname'] }}:8080 cookie app{{loop.index}} check
       {% endfor %}
     {% endif %}
     {% if groups['tag_AnsibleGroup_apps'] is defined %}
-      {% for app in groups['tag_AnsibleGroup_apps'] %}
-        server app{{loop.index}} {{ hostvars[app]['ec2_private_ip_address'] }}:8080 cookie app{{loop.index}} check
+      {% for host in groups['tag_AnsibleGroup_apps'] %}
+        server app{{loop.index}} {{ {{ hostvars[host]['ansible_facts']['eth0']['ipv4']['address'] }} }}:8080 cookie app{{loop.index}} check
       {% endfor %}
     {% endif %}
 
