--- a/roles/lb-tier/templates/haproxy.cfg.j2
+++ b/roles/lb-tier/templates/haproxy.cfg.j2
@@ -27,6 +27,6 @@ backend app-servers
     option forwardfor
     {% if groups['apps'] is defined%}
       {% for host in groups['apps'] %}
-        server app{{loop.index}} {{ hostvars[host]['all_ipv4_address'][0] }}:8080 cookie app{{loop.index}} check
+        server app{{loop.index}} {{ hostvars[host]['ansible_facts']['all_ipv4_address'][0] }}:8080 cookie app{{loop.index}} check
       {% endfor %}
     {% endif %}
