--- a/roles/lb-tier/templates/haproxy.cfg.j2
+++ b/roles/lb-tier/templates/haproxy.cfg.j2
@@ -31,7 +31,7 @@ backend app-servers
     server app{{loop.index}} {{ hostvars[host]['ec2_private_ip_address'] }}:8080 cookie app{{loop.index}} check
   {% endfor %}
  {% else %}
-  {% for host in groups['tag_AnsibleGroup_apps'] %}
+  {% for host in groups['apps'] %}
     server app{{loop.index}} {{ hostvars[host]['inventory_hostname'] }}:8080 cookie app{{loop.index}} check
   {% endfor %}
  {% endif %}
